themes/standard: Fixed vertical gap in listing below the first item

--- a/www/themes/standard/css/standard.less
+++ b/www/themes/standard/css/standard.less
@@ -396,7 +396,7 @@ hr {
 	& .image a {
 	
 		display: block;
-		margin: -@paddingText;
+		margin: -@paddingText -@paddingText -(@paddingText - 1px) -@paddingText;
 		min-height: 70px;
 	
 		& .data {
